VSE: "Bounding Box Center" pivot point is the same as "Median Point" #111715

Closed
opened 2023-08-30 21:17:25 +02:00 by Matthew Hinson · 0 comments
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-10 12:57, hash: 37d1d4cb07e6
Worked: (unknown)

Short description of error
The "Bounding Box Center" pivot point option in the VSE places the pivot point at the median of the selected images' origins, not at the center of the bounding box.

Exact steps for others to reproduce the error
With the steps below, you'd expect the pivot point to stay at the same X position when selecting the third image. Instead, it gets "weighed" to the left, just like with Median Point.
image
image

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-10 12:57, hash: `37d1d4cb07e6` Worked: (unknown) **Short description of error** The "Bounding Box Center" pivot point option in the VSE places the pivot point at the median of the selected images' origins, not at the center of the bounding box. **Exact steps for others to reproduce the error** With the steps below, you'd expect the pivot point to stay at the same X position when selecting the third image. Instead, it gets "weighed" to the left, just like with Median Point. ![image](/attachments/866739d0-ecca-498a-afd3-d43509489e78) ![image](/attachments/7290af9c-a2a8-4230-ba77-373b1b1bfb09)
277 KiB
275 KiB
Matthew Hinson added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-08-30 21:17:25 +02:00
Germano Cavalcante self-assigned this 2023-08-31 05:43:11 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-31 20:42:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111715
No description provided.