Fix #111715: VSE: "Bounding Box Center" pivot point is the same as "Median Point"

The logic to calculate the bounds was missing.

Also add a notifier with `NC_SPACE | ND_SPACE_SEQUENCER` to update the
space.